--- a/index.html
+++ b/index.html
@@ -29,63 +29,66 @@
             <!--This is the card info.-->
             <div class="col-12 col-lg-6">
               <!--card number-->
-              <p class="mb-2 mt-2">Card Number</p>
-              <input class="rounded-2 border-light m-1 p-1" type="text" placeholder="XXXX-XXXX-XXXX-XXXX" maxlength="20"
-                required>
+              <p class="mb-2 mt-2">Card Number
+                <input class="rounded-2 border-light m-1 p-1" type="text" placeholder="XXXX-XXXX-XXXX-XXXX"
+                  maxlength="20" inputmode="numeric" pattern="[0-9]{20}" required>
             </div>
             <div class="col-12 col-lg-3">
               <!--card CVC number-->
               <p class="mb-2 mt-2">CVC Number</p>
-              <input class="rounded-2 border-light m-1 p-1" type="text" placeholder="123" maxlength="3" required>
+              <input class="rounded-2 border-light m-1 p-1" type="text" placeholder="123" maxlength="3" required
+                pattern="[0-9]{3}" inputmode="numeric">
             </div>
             <div class="col-12 col-lg-3">
               <!-- Payment amount-->
               <p class="mb-2 mt-2">Amount</p>
-              $<input class="rounded-2 border-light m-1 p-1" type="text" placeholder="Amount" required>
+              $<input class="rounded-2 border-light m-1 p-1" type="text" placeholder="Amount" inputmode="numeric"
+                pattern="[0-9]{6}" maxlength="6" required>
             </div>
           </div>
           <div class="row d-flex fila2">
             <!--Thi is the personal info.-->
             <div class="col-12 col-lg-6"><!--First name-->
               <p class="mb-2 mt-3">First Name</p>
-              <input class="rounded-2 border-light m-1 p-1" type="text">
+              <input class="rounded-2 border-light m-1 p-1" type="text" required>
             </div>
             <div class="col-12 col-lg-6"><!--Last name-->
               <p class="mb-2 mt-3">Last Name</p>
-              <input class="rounded-2 border-light m-1 p-1" type="text">
+              <input class="rounded-2 border-light m-1 p-1" type="text" required>
             </div>
           </div>
           <div class="row d-flex fila3">
             <!--Addres Info.-->
             <div class="col-12 col-lg-6 mt-1"><!--City-->
               <p class="mb-2 mt-2">City</p>
-              <input class="rounded-2 border-light m-1 p-1" type="text">
+              <input class="rounded-2 border-light m-1 p-1" type="text" required>
             </div>
             <div class="col-12 col-lg-3 mt-5"><!--State Dropdown-->
-              <select class="form-select mb-3 border-dark-subtle" name="State" id="state">
+              <select class="form-select mb-3 border-dark-subtle" name="State" id="state" required>
                 <option size="10" value="pick">Pick a state</option>
-                <option value="madrid"> Madrid</option>
-                <option value="barcelona">Barcelona</option>
-                <option value="valencia">Valencia</option>
+                <option value="madrid">Comunidad de Madrid</option>
+                <option value="barcelona">Catalunya</option>
+                <option value="valencia">Comunidad Valenciana</option>
               </select>
             </div>
             <div class="col-12 col-lg-3"><!--Postal Code-->
               <p class="mb-2 mt-3">Postal Code</p>
-              <input class="rounded-2 border-light m-1 p-1" type="text">
+              <input class="rounded-2 border-light m-1 p-1" type="text" required inputmode="numeric" pattern="[0-9]{5}"
+                maxlength="5">
             </div>
           </div>
           <div class="row d-flex fila4">
             <!--Payment Metod and text box-->
             <div class="col-12 col-lg-6">
               <p class="mb-2 mt-2">We Accept:</p>
-              <div class="badge text-bg-secondary fs-3">
+              <div class="badge text-bg-secondary fs-3" required>
                 <input type="radio" id="master-card" name="credit-card" value="Master Card">
                 <label for="master-card"><i class="fa-brands fa-cc-mastercard"></i></label>
                 <input type="radio" id="visa" name="credit-card" value="Visa">
                 <label for="visa"><i class="fa-brands fa-cc-visa"></i></label>
                 <input type="radio" id="diners-club" name="credit-card" value="Diners Club">
                 <label for="diners-club"><i class="fa-brands fa-cc-diners-club"></i></label>
-                <input type="radio" id="american-express" name="credit-card" value="American Express">
+                <input type="radio" id="american-express" name="credit-card" value="American Express" required>
                 <label for="american-express"><i class="fa-brands fa-cc-amex"></i></label>
               </div>
             </div>
@@ -100,7 +103,7 @@
       <div class="d-flex justify-content-end gap-2 bg-body-secondary rounded-bottom">
         <!--This is the bottom box-->
         <button type="button" class="btn btn-dark px-3 my-3">Cancel</button>
-        <button type="button" class="btn btn-primary px-3 m-3">Send</button>
+        <button type="submit" class="btn btn-primary px-3 m-3">Send</button>
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
